--- a/treebase.ini
+++ b/treebase.ini
@@ -1,5 +1,6 @@
 [path]
 blender_exe_path = C:/Program Files/Blender Foundation/Blender 4.0/blender.exe
+blender_project_path = C:/tmp
 
 [output]
 output_format = PNG
