--- a/treebase.ini
+++ b/treebase.ini
@@ -3,5 +3,5 @@ blender_exe_path = C:/Program Files/Blender Foundation/Blender 4.0/blender.exe
 blender_project_path = C:/tmp
 
 [output]
-output_format = DPX
+output_format = PNG
 
