--- a/treebase.ini
+++ b/treebase.ini
@@ -1,6 +1,6 @@
 [path]
-blender_exe_path = C:/Program Files/Blender Foundation/Blender 4.0/blender.exe
-blender_project_path = C:/tmp
+blender_exe_path = C:/Users/japan/Downloads/blender-4.1.0-windows-x64/blender-4.1.0-windows-x64/blender.exe
+blender_project_path = C:/Users/japan/Documents
 
 [output]
 output_format = PNG
