update: fix format dropdown

--- a/treebase.ini
+++ b/treebase.ini
@@ -1,7 +1,7 @@
 [path]
 blender_exe_path = C:/Users/japan/Downloads/blender-4.1.0-windows-x64/blender-4.1.0-windows-x64/blender.exe
-blender_project_path = C:/Users/japan/Documents
+blender_project_path = C:/Users/japan/dsdfadfasdf
 
 [output]
-output_format = PNG
+output_format = DPX
 
