update: default config

--- a/treebase.ini
+++ b/treebase.ini
@@ -1,6 +1,6 @@
 [path]
-blender_exe_path = C:/Users/japan/Downloads/blender-4.1.0-windows-x64/blender-4.1.0-windows-x64/blender.exe
-blender_project_path = C:/Users/japan/dsdfadfasdf
+blender_exe_path = 
+blender_project_path = 
 
 [output]
 output_format = DPX
